expectations/expect.output
Terminals which are not used

   RANGE


State 291 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: program pathdecl
    2        | program assertdecl
    3        | /* empty */

    4 pathdecl: pathtype IDENTIFIER '{' path_limits thread_list '}'
    5         | FRAGMENT pathtype IDENTIFIER '{' path_limits statement_list '}'
    6         | pathtype IDENTIFIER ':' pathboolexpr ';'

    7 pathtype: VALIDATOR
    8         | INVALIDATOR
    9         | RECOGNIZER

   10 pathboolexpr: pathboolexpr B_AND pathboolexpr
   11             | pathboolexpr B_OR pathboolexpr
   12             | pathboolexpr IMPLIES pathboolexpr
   13             | '!' pathboolexpr
   14             | '(' pathboolexpr ')'
   15             | IDENTIFIER

   16 statement_list: statement_list statement
   17               | /* empty */

   18 statement: string_func
   19          | int_func
   20          | CALL '(' IDENTIFIER ')' ';'
   21          | XOR '{' xor_list '}'
   22          | MAYBE statement
   23          | FUTURE statement
   24          | FUTURE IDENTIFIER statement
   25          | DONE '(' IDENTIFIER ')' ';'
   26          | ANY '(' ')' ';'
   27          | '{' statement_list '}'
   28          | VARIABLE '=' int_expr
   29          | VARIABLE '=' string_expr
   30          | error ';'

   31 string_expr: string_func
   32            | simple_string_expr ';'

   33 string_func: SEND '(' msg_target ')' limit_list ';'
   34            | RECV '(' msg_target ')' limit_list ';'
   35            | NOTICE '(' simple_string_expr ')' ';'
   36            | task limit_list ';'
   37            | task limit_list '{' statement_list '}'

   38 simple_string_expr: string_literal
   39                   | VARIABLE
   40                   | '!' simple_string_expr

   41 int_expr: int_func
   42         | simple_int_expr ';'

   43 int_func: REPEAT repeat_range statement

   44 simple_int_expr: INTEGER
   45                | INSTANCES '(' IDENTIFIER ')'
   46                | UNIQUE '(' IDENTIFIER ')'
   47                | UNIQUE '(' VARIABLE ')'
   48                | simple_int_expr '*' simple_int_expr
   49                | simple_int_expr '+' simple_int_expr
   50                | simple_int_expr '-' simple_int_expr
   51                | VARIABLE

   52 xor_list: xor_list xor
   53         | /* empty */

   54 xor: BRANCH ':' statement_list

   55 thread_list: thread_list thread
   56            | /* empty */

   57 msg_target: msg_list
   58           | simple_string_expr

   59 msg_list: msg_list ',' IDENTIFIER
   60         | IDENTIFIER

   61 thread: THREAD IDENTIFIER '(' simple_string_expr ',' thread_count_range ')' '{' path_limits statement_list '}'

   62 thread_count_range: INTEGER
   63                   | '{' INTEGER ',' INTEGER '}'

   64 path_limits: path_limits limit ';'
   65            | path_limits level ';'
   66            | /* empty */

   67 limit_list: limit_list limit
   68           | /* empty */

   69 limit: LIMIT '(' IDENTIFIER ',' limit_spec ')'

   70 level: LEVEL '(' INTEGER ')'

   71 limit_spec: limit_range
   72           | count_range
   73           | INTEGER
   74           | unit_qty

   75 limit_range: '{' unit_qty ',' unit_qty '}'
   76            | '{' unit_qty '+' '}'
   77            | '{' '=' unit_qty '}'

   78 count_range: '{' simple_int_expr ',' simple_int_expr '}'
   79            | '{' simple_int_expr '+' '}'
   80            | '{' '=' simple_int_expr '}'
   81            | '{' float_expr ',' float_expr '}'
   82            | '{' float_expr '+' '}'
   83            | '{' '=' float_expr '}'

   84 unit_qty: INTEGER IDENTIFIER
   85         | FLOAT IDENTIFIER
   86         | AVERAGE '(' IDENTIFIER ',' IDENTIFIER ')'
   87         | AVERAGE '(' IDENTIFIER ',' string_literal ')'
   88         | STDDEV '(' IDENTIFIER ',' IDENTIFIER ')'
   89         | STDDEV '(' IDENTIFIER ',' string_literal ')'
   90         | F_MAX '(' IDENTIFIER ',' IDENTIFIER ')'
   91         | F_MAX '(' IDENTIFIER ',' string_literal ')'
   92         | F_MIN '(' IDENTIFIER ',' IDENTIFIER ')'
   93         | F_MIN '(' IDENTIFIER ',' string_literal ')'

   94 repeat_range: simple_int_expr
   95             | BETWEEN simple_int_expr AND simple_int_expr

   96 task: TASK '(' simple_string_expr ')'

   97 string_literal: STRING
   98               | REGEX
   99               | '*'

  100 assertdecl: DURING '(' window ')' assert
  101           | assert

  102 window: INTEGER ',' INTEGER
  103       | ANY INTEGER

  104 assert: ASSERT '(' bool_expr ')' ';'

  105 bool_expr: bool_expr B_AND bool_expr
  106          | bool_expr B_OR bool_expr
  107          | bool_expr IMPLIES bool_expr
  108          | '!' bool_expr
  109          | '(' bool_expr ')'
  110          | simple_int_expr IN count_range
  111          | simple_int_expr '<' simple_int_expr
  112          | simple_int_expr '>' simple_int_expr
  113          | simple_int_expr LE simple_int_expr
  114          | simple_int_expr GE simple_int_expr
  115          | simple_int_expr EQ simple_int_expr
  116          | simple_int_expr NE simple_int_expr
  117          | unit_qty IN limit_range
  118          | unit_qty '<' unit_qty
  119          | unit_qty '>' unit_qty
  120          | unit_qty LE unit_qty
  121          | unit_qty GE unit_qty
  122          | unit_qty EQ unit_qty
  123          | unit_qty NE unit_qty
  124          | float_expr '<' float_expr
  125          | float_expr '>' float_expr
  126          | float_expr LE float_expr
  127          | float_expr GE float_expr
  128          | float_expr EQ float_expr
  129          | float_expr NE float_expr

  130 float_expr: FLOAT
  131           | simple_int_expr '/' simple_int_expr
  132           | unit_qty '/' unit_qty
  133           | float_expr '/' float_expr
  134           | float_expr '*' float_expr
  135           | float_expr '-' float_expr
  136           | float_expr '+' float_expr
  137           | float_expr F_POW float_expr
  138           | LOG '(' float_expr ')'
  139           | LOGN '(' float_expr ')'
  140           | EXP '(' float_expr ')'
  141           | SQRT '(' float_expr ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 13 40 108
'(' (40) 14 20 25 26 33 34 35 45 46 47 61 69 70 86 87 88 89 90 91 92
    93 96 100 104 109 138 139 140 141
')' (41) 14 20 25 26 33 34 35 45 46 47 61 69 70 86 87 88 89 90 91 92
    93 96 100 104 109 138 139 140 141
'*' (42) 48 99 134
'+' (43) 49 76 79 82 136
',' (44) 59 61 63 69 75 78 81 86 87 88 89 90 91 92 93 102
'-' (45) 50 135
'/' (47) 131 132 133
':' (58) 6 54
';' (59) 6 20 25 26 30 32 33 34 35 36 42 64 65 104
'<' (60) 111 118 124
'=' (61) 28 29 77 80 83
'>' (62) 112 119 125
'{' (123) 4 5 21 27 37 61 63 75 76 77 78 79 80 81 82 83
'}' (125) 4 5 21 27 37 61 63 75 76 77 78 79 80 81 82 83
error (256) 30
VALIDATOR (258) 7
INVALIDATOR (259) 8
RECOGNIZER (260) 9
FRAGMENT (261) 5
LEVEL (262) 70
REPEAT (263) 43
BRANCH (264) 54
XOR (265) 21
MAYBE (266) 22
CALL (267) 20
FUTURE (268) 23 24
DONE (269) 25
BETWEEN (270) 95
AND (271) 95
ASSERT (272) 104
INSTANCES (273) 45
UNIQUE (274) 46 47
DURING (275) 100
ANY (276) 26 103
AVERAGE (277) 86 87
STDDEV (278) 88 89
F_MAX (279) 90 91
F_MIN (280) 92 93
F_POW (281) 137
SQRT (282) 141
LOG (283) 138
LOGN (284) 139
EXP (285) 140
GE (286) 114 121 127
LE (287) 113 120 126
EQ (288) 115 122 128
NE (289) 116 123 129
B_AND (290) 10 105
B_OR (291) 11 106
IMPLIES (292) 12 107
IN (293) 110 117
SEND (294) 33
RECV (295) 34
TASK (296) 96
THREAD (297) 61
NOTICE (298) 35
LIMIT (299) 69
RANGE (300)
STRING (301) 97
REGEX (302) 98
INTEGER (303) 44 62 63 70 73 84 102 103
FLOAT (304) 85 130
IDENTIFIER (305) 4 5 6 15 20 24 25 45 46 59 60 61 69 84 85 86 87 88
    89 90 91 92 93
VARIABLE (306) 28 29 39 47 51


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
program (68)
    on left: 1 2 3, on right: 0 1 2
pathdecl (69)
    on left: 4 5 6, on right: 1
pathtype (70)
    on left: 7 8 9, on right: 4 5 6
pathboolexpr (71)
    on left: 10 11 12 13 14 15, on right: 6 10 11 12 13 14
statement_list (72)
    on left: 16 17, on right: 5 16 27 37 54 61
statement (73)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29 30,
    on right: 16 22 23 24 43
string_expr (74)
    on left: 31 32, on right: 29
string_func (75)
    on left: 33 34 35 36 37, on right: 18 31
simple_string_expr (76)
    on left: 38 39 40, on right: 32 35 40 58 61 96
int_expr (77)
    on left: 41 42, on right: 28
int_func (78)
    on left: 43, on right: 19 41
simple_int_expr (79)
    on left: 44 45 46 47 48 49 50 51, on right: 42 48 49 50 78 79 80
    94 95 110 111 112 113 114 115 116 131
xor_list (80)
    on left: 52 53, on right: 21 52
xor (81)
    on left: 54, on right: 52
thread_list (82)
    on left: 55 56, on right: 4 55
msg_target (83)
    on left: 57 58, on right: 33 34
msg_list (84)
    on left: 59 60, on right: 57 59
thread (85)
    on left: 61, on right: 55
thread_count_range (86)
    on left: 62 63, on right: 61
path_limits (87)
    on left: 64 65 66, on right: 4 5 61 64 65
limit_list (88)
    on left: 67 68, on right: 33 34 36 37 67
limit (89)
    on left: 69, on right: 64 67
level (90)
    on left: 70, on right: 65
limit_spec (91)
    on left: 71 72 73 74, on right: 69
limit_range (92)
    on left: 75 76 77, on right: 71 117
count_range (93)
    on left: 78 79 80 81 82 83, on right: 72 110
unit_qty (94)
    on left: 84 85 86 87 88 89 90 91 92 93, on right: 74 75 76 77 117
    118 119 120 121 122 123 132
repeat_range (95)
    on left: 94 95, on right: 43
task (96)
    on left: 96, on right: 36 37
string_literal (97)
    on left: 97 98 99, on right: 38 87 89 91 93
assertdecl (98)
    on left: 100 101, on right: 2
window (99)
    on left: 102 103, on right: 100
assert (100)
    on left: 104, on right: 100 101
bool_expr (101)
    on left: 105 106 107 108 109 110 111 112 113 114 115 116 117 118
    119 120 121 122 123 124 125 126 127 128 129, on right: 104 105
    106 107 108 109
float_expr (102)
    on left: 130 131 132 133 134 135 136 137 138 139 140 141,
    on right: 81 82 83 124 125 126 127 128 129 133 134 135 136 137
    138 139 140 141


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (program)

    program  go to state 1


state 1

    0 $accept: program . $end
    1 program: program . pathdecl
    2        | program . assertdecl

    $end         shift, and go to state 2
    VALIDATOR    shift, and go to state 3
    INVALIDATOR  shift, and go to state 4
    RECOGNIZER   shift, and go to state 5
    FRAGMENT     shift, and go to state 6
    ASSERT       shift, and go to state 7
    DURING       shift, and go to state 8

    pathdecl    go to state 9
    pathtype    go to state 10
    assertdecl  go to state 11
    assert      go to state 12


state 2

    0 $accept: program $end .

    $default  accept


state 3

    7 pathtype: VALIDATOR .

    $default  reduce using rule 7 (pathtype)


state 4

    8 pathtype: INVALIDATOR .

    $default  reduce using rule 8 (pathtype)


state 5

    9 pathtype: RECOGNIZER .

    $default  reduce using rule 9 (pathtype)


state 6

    5 pathdecl: FRAGMENT . pathtype IDENTIFIER '{' path_limits statement_list '}'

    VALIDATOR    shift, and go to state 3
    INVALIDATOR  shift, and go to state 4
    RECOGNIZER   shift, and go to state 5

    pathtype  go to state 13


state 7

  104 assert: ASSERT . '(' bool_expr ')' ';'

    '('  shift, and go to state 14


state 8

  100 assertdecl: DURING . '(' window ')' assert

    '('  shift, and go to state 15


state 9

    1 program: program pathdecl .

    $default  reduce using rule 1 (program)


state 10

    4 pathdecl: pathtype . IDENTIFIER '{' path_limits thread_list '}'
    6         | pathtype . IDENTIFIER ':' pathboolexpr ';'

    IDENTIFIER  shift, and go to state 16


state 11

    2 program: program assertdecl .

    $default  reduce using rule 2 (program)


state 12

  101 assertdecl: assert .

    $default  reduce using rule 101 (assertdecl)


state 13

    5 pathdecl: FRAGMENT pathtype . IDENTIFIER '{' path_limits statement_list '}'

    IDENTIFIER  shift, and go to state 17


state 14

  104 assert: ASSERT '(' . bool_expr ')' ';'

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    AVERAGE    shift, and go to state 20
    STDDEV     shift, and go to state 21
    F_MAX      shift, and go to state 22
    F_MIN      shift, and go to state 23
    SQRT       shift, and go to state 24
    LOG        shift, and go to state 25
    LOGN       shift, and go to state 26
    EXP        shift, and go to state 27
    INTEGER    shift, and go to state 28
    FLOAT      shift, and go to state 29
    VARIABLE   shift, and go to state 30
    '!'        shift, and go to state 31
    '('        shift, and go to state 32

    simple_int_expr  go to state 33
    unit_qty         go to state 34
    bool_expr        go to state 35
    float_expr       go to state 36


state 15

  100 assertdecl: DURING '(' . window ')' assert

    ANY      shift, and go to state 37
    INTEGER  shift, and go to state 38

    window  go to state 39


state 16

    4 pathdecl: pathtype IDENTIFIER . '{' path_limits thread_list '}'
    6         | pathtype IDENTIFIER . ':' pathboolexpr ';'

    '{'  shift, and go to state 40
    ':'  shift, and go to state 41


state 17

    5 pathdecl: FRAGMENT pathtype IDENTIFIER . '{' path_limits statement_list '}'

    '{'  shift, and go to state 42


state 18

   45 simple_int_expr: INSTANCES . '(' IDENTIFIER ')'

    '('  shift, and go to state 43


state 19

   46 simple_int_expr: UNIQUE . '(' IDENTIFIER ')'
   47                | UNIQUE . '(' VARIABLE ')'

    '('  shift, and go to state 44


state 20

   86 unit_qty: AVERAGE . '(' IDENTIFIER ',' IDENTIFIER ')'
   87         | AVERAGE . '(' IDENTIFIER ',' string_literal ')'

    '('  shift, and go to state 45


state 21

   88 unit_qty: STDDEV . '(' IDENTIFIER ',' IDENTIFIER ')'
   89         | STDDEV . '(' IDENTIFIER ',' string_literal ')'

    '('  shift, and go to state 46


state 22

   90 unit_qty: F_MAX . '(' IDENTIFIER ',' IDENTIFIER ')'
   91         | F_MAX . '(' IDENTIFIER ',' string_literal ')'

    '('  shift, and go to state 47


state 23

   92 unit_qty: F_MIN . '(' IDENTIFIER ',' IDENTIFIER ')'
   93         | F_MIN . '(' IDENTIFIER ',' string_literal ')'

    '('  shift, and go to state 48


state 24

  141 float_expr: SQRT . '(' float_expr ')'

    '('  shift, and go to state 49


state 25

  138 float_expr: LOG . '(' float_expr ')'

    '('  shift, and go to state 50


state 26

  139 float_expr: LOGN . '(' float_expr ')'

    '('  shift, and go to state 51


state 27

  140 float_expr: EXP . '(' float_expr ')'

    '('  shift, and go to state 52


state 28

   44 simple_int_expr: INTEGER .
   84 unit_qty: INTEGER . IDENTIFIER

    IDENTIFIER  shift, and go to state 53

    $default  reduce using rule 44 (simple_int_expr)


state 29

   85 unit_qty: FLOAT . IDENTIFIER
  130 float_expr: FLOAT .

    IDENTIFIER  shift, and go to state 54

    $default  reduce using rule 130 (float_expr)


state 30

   51 simple_int_expr: VARIABLE .

    $default  reduce using rule 51 (simple_int_expr)


state 31

  108 bool_expr: '!' . bool_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    AVERAGE    shift, and go to state 20
    STDDEV     shift, and go to state 21
    F_MAX      shift, and go to state 22
    F_MIN      shift, and go to state 23
    SQRT       shift, and go to state 24
    LOG        shift, and go to state 25
    LOGN       shift, and go to state 26
    EXP        shift, and go to state 27
    INTEGER    shift, and go to state 28
    FLOAT      shift, and go to state 29
    VARIABLE   shift, and go to state 30
    '!'        shift, and go to state 31
    '('        shift, and go to state 32

    simple_int_expr  go to state 33
    unit_qty         go to state 34
    bool_expr        go to state 55
    float_expr       go to state 36


state 32

  109 bool_expr: '(' . bool_expr ')'

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    AVERAGE    shift, and go to state 20
    STDDEV     shift, and go to state 21
    F_MAX      shift, and go to state 22
    F_MIN      shift, and go to state 23
    SQRT       shift, and go to state 24
    LOG        shift, and go to state 25
    LOGN       shift, and go to state 26
    EXP        shift, and go to state 27
    INTEGER    shift, and go to state 28
    FLOAT      shift, and go to state 29
    VARIABLE   shift, and go to state 30
    '!'        shift, and go to state 31
    '('        shift, and go to state 32

    simple_int_expr  go to state 33
    unit_qty         go to state 34
    bool_expr        go to state 56
    float_expr       go to state 36


state 33

   48 simple_int_expr: simple_int_expr . '*' simple_int_expr
   49                | simple_int_expr . '+' simple_int_expr
   50                | simple_int_expr . '-' simple_int_expr
  110 bool_expr: simple_int_expr . IN count_range
  111          | simple_int_expr . '<' simple_int_expr
  112          | simple_int_expr . '>' simple_int_expr
  113          | simple_int_expr . LE simple_int_expr
  114          | simple_int_expr . GE simple_int_expr
  115          | simple_int_expr . EQ simple_int_expr
  116          | simple_int_expr . NE simple_int_expr
  131 float_expr: simple_int_expr . '/' simple_int_expr

    GE   shift, and go to state 57
    LE   shift, and go to state 58
    EQ   shift, and go to state 59
    NE   shift, and go to state 60
    IN   shift, and go to state 61
    '<'  shift, and go to state 62
    '>'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67


state 34

  117 bool_expr: unit_qty . IN limit_range
  118          | unit_qty . '<' unit_qty
  119          | unit_qty . '>' unit_qty
  120          | unit_qty . LE unit_qty
  121          | unit_qty . GE unit_qty
  122          | unit_qty . EQ unit_qty
  123          | unit_qty . NE unit_qty
  132 float_expr: unit_qty . '/' unit_qty

    GE   shift, and go to state 68
    LE   shift, and go to state 69
    EQ   shift, and go to state 70
    NE   shift, and go to state 71
    IN   shift, and go to state 72
    '<'  shift, and go to state 73
    '>'  shift, and go to state 74
    '/'  shift, and go to state 75


state 35

  104 assert: ASSERT '(' bool_expr . ')' ';'
  105 bool_expr: bool_expr . B_AND bool_expr
  106          | bool_expr . B_OR bool_expr
  107          | bool_expr . IMPLIES bool_expr

    B_AND    shift, and go to state 76
    B_OR     shift, and go to state 77
    IMPLIES  shift, and go to state 78
    ')'      shift, and go to state 79


state 36

  124 bool_expr: float_expr . '<' float_expr
  125          | float_expr . '>' float_expr
  126          | float_expr . LE float_expr
  127          | float_expr . GE float_expr
  128          | float_expr . EQ float_expr
  129          | float_expr . NE float_expr
  133 float_expr: float_expr . '/' float_expr
  134           | float_expr . '*' float_expr
  135           | float_expr . '-' float_expr
  136           | float_expr . '+' float_expr
  137           | float_expr . F_POW float_expr

    F_POW  shift, and go to state 80
    GE     shift, and go to state 81
    LE     shift, and go to state 82
    EQ     shift, and go to state 83
    NE     shift, and go to state 84
    '<'    shift, and go to state 85
    '>'    shift, and go to state 86
    '+'    shift, and go to state 87
    '-'    shift, and go to state 88
    '*'    shift, and go to state 89
    '/'    shift, and go to state 90


state 37

  103 window: ANY . INTEGER

    INTEGER  shift, and go to state 91


state 38

  102 window: INTEGER . ',' INTEGER

    ','  shift, and go to state 92


state 39

  100 assertdecl: DURING '(' window . ')' assert

    ')'  shift, and go to state 93


state 40

    4 pathdecl: pathtype IDENTIFIER '{' . path_limits thread_list '}'

    $default  reduce using rule 66 (path_limits)

    path_limits  go to state 94


state 41

    6 pathdecl: pathtype IDENTIFIER ':' . pathboolexpr ';'

    IDENTIFIER  shift, and go to state 95
    '!'         shift, and go to state 96
    '('         shift, and go to state 97

    pathboolexpr  go to state 98


state 42

    5 pathdecl: FRAGMENT pathtype IDENTIFIER '{' . path_limits statement_list '}'

    $default  reduce using rule 66 (path_limits)

    path_limits  go to state 99


state 43

   45 simple_int_expr: INSTANCES '(' . IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 100


state 44

   46 simple_int_expr: UNIQUE '(' . IDENTIFIER ')'
   47                | UNIQUE '(' . VARIABLE ')'

    IDENTIFIER  shift, and go to state 101
    VARIABLE    shift, and go to state 102


state 45

   86 unit_qty: AVERAGE '(' . IDENTIFIER ',' IDENTIFIER ')'
   87         | AVERAGE '(' . IDENTIFIER ',' string_literal ')'

    IDENTIFIER  shift, and go to state 103


state 46

   88 unit_qty: STDDEV '(' . IDENTIFIER ',' IDENTIFIER ')'
   89         | STDDEV '(' . IDENTIFIER ',' string_literal ')'

    IDENTIFIER  shift, and go to state 104


state 47

   90 unit_qty: F_MAX '(' . IDENTIFIER ',' IDENTIFIER ')'
   91         | F_MAX '(' . IDENTIFIER ',' string_literal ')'

    IDENTIFIER  shift, and go to state 105


state 48

   92 unit_qty: F_MIN '(' . IDENTIFIER ',' IDENTIFIER ')'
   93         | F_MIN '(' . IDENTIFIER ',' string_literal ')'

    IDENTIFIER  shift, and go to state 106


state 49

  141 float_expr: SQRT '(' . float_expr ')'

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    AVERAGE    shift, and go to state 20
    STDDEV     shift, and go to state 21
    F_MAX      shift, and go to state 22
    F_MIN      shift, and go to state 23
    SQRT       shift, and go to state 24
    LOG        shift, and go to state 25
    LOGN       shift, and go to state 26
    EXP        shift, and go to state 27
    INTEGER    shift, and go to state 28
    FLOAT      shift, and go to state 29
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 107
    unit_qty         go to state 108
    float_expr       go to state 109


state 50

  138 float_expr: LOG '(' . float_expr ')'

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    AVERAGE    shift, and go to state 20
    STDDEV     shift, and go to state 21
    F_MAX      shift, and go to state 22
    F_MIN      shift, and go to state 23
    SQRT       shift, and go to state 24
    LOG        shift, and go to state 25
    LOGN       shift, and go to state 26
    EXP        shift, and go to state 27
    INTEGER    shift, and go to state 28
    FLOAT      shift, and go to state 29
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 107
    unit_qty         go to state 108
    float_expr       go to state 110


state 51

  139 float_expr: LOGN '(' . float_expr ')'

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    AVERAGE    shift, and go to state 20
    STDDEV     shift, and go to state 21
    F_MAX      shift, and go to state 22
    F_MIN      shift, and go to state 23
    SQRT       shift, and go to state 24
    LOG        shift, and go to state 25
    LOGN       shift, and go to state 26
    EXP        shift, and go to state 27
    INTEGER    shift, and go to state 28
    FLOAT      shift, and go to state 29
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 107
    unit_qty         go to state 108
    float_expr       go to state 111


state 52

  140 float_expr: EXP '(' . float_expr ')'

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    AVERAGE    shift, and go to state 20
    STDDEV     shift, and go to state 21
    F_MAX      shift, and go to state 22
    F_MIN      shift, and go to state 23
    SQRT       shift, and go to state 24
    LOG        shift, and go to state 25
    LOGN       shift, and go to state 26
    EXP        shift, and go to state 27
    INTEGER    shift, and go to state 28
    FLOAT      shift, and go to state 29
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 107
    unit_qty         go to state 108
    float_expr       go to state 112


state 53

   84 unit_qty: INTEGER IDENTIFIER .

    $default  reduce using rule 84 (unit_qty)


state 54

   85 unit_qty: FLOAT IDENTIFIER .

    $default  reduce using rule 85 (unit_qty)


state 55

  105 bool_expr: bool_expr . B_AND bool_expr
  106          | bool_expr . B_OR bool_expr
  107          | bool_expr . IMPLIES bool_expr
  108          | '!' bool_expr .

    $default  reduce using rule 108 (bool_expr)


state 56

  105 bool_expr: bool_expr . B_AND bool_expr
  106          | bool_expr . B_OR bool_expr
  107          | bool_expr . IMPLIES bool_expr
  109          | '(' bool_expr . ')'

    B_AND    shift, and go to state 76
    B_OR     shift, and go to state 77
    IMPLIES  shift, and go to state 78
    ')'      shift, and go to state 113


state 57

  114 bool_expr: simple_int_expr GE . simple_int_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    INTEGER    shift, and go to state 114
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 115


state 58

  113 bool_expr: simple_int_expr LE . simple_int_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    INTEGER    shift, and go to state 114
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 116


state 59

  115 bool_expr: simple_int_expr EQ . simple_int_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    INTEGER    shift, and go to state 114
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 117


state 60

  116 bool_expr: simple_int_expr NE . simple_int_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    INTEGER    shift, and go to state 114
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 118


state 61

  110 bool_expr: simple_int_expr IN . count_range

    '{'  shift, and go to state 119

    count_range  go to state 120


state 62

  111 bool_expr: simple_int_expr '<' . simple_int_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    INTEGER    shift, and go to state 114
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 121


state 63

  112 bool_expr: simple_int_expr '>' . simple_int_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    INTEGER    shift, and go to state 114
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 122


state 64

   49 simple_int_expr: simple_int_expr '+' . simple_int_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    INTEGER    shift, and go to state 114
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 123


state 65

   50 simple_int_expr: simple_int_expr '-' . simple_int_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    INTEGER    shift, and go to state 114
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 124


state 66

   48 simple_int_expr: simple_int_expr '*' . simple_int_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    INTEGER    shift, and go to state 114
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 125


state 67

  131 float_expr: simple_int_expr '/' . simple_int_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    INTEGER    shift, and go to state 114
    VARIABLE   shift, and go to state 30

    simple_int_expr  go to state 126


state 68

  121 bool_expr: unit_qty GE . unit_qty

    AVERAGE  shift, and go to state 20
    STDDEV   shift, and go to state 21
    F_MAX    shift, and go to state 22
    F_MIN    shift, and go to state 23
    INTEGER  shift, and go to state 127
    FLOAT    shift, and go to state 128

    unit_qty  go to state 129


state 69

  120 bool_expr: unit_qty LE . unit_qty

    AVERAGE  shift, and go to state 20
    STDDEV   shift, and go to state 21
    F_MAX    shift, and go to state 22
    F_MIN    shift, and go to state 23
    INTEGER  shift, and go to state 127
    FLOAT    shift, and go to state 128

    unit_qty  go to state 130


state 70

  122 bool_expr: unit_qty EQ . unit_qty

    AVERAGE  shift, and go to state 20
    STDDEV   shift, and go to state 21
    F_MAX    shift, and go to state 22
    F_MIN    shift, and go to state 23
    INTEGER  shift, and go to state 127
    FLOAT    shift, and go to state 128

    unit_qty  go to state 131


state 71

  123 bool_expr: unit_qty NE . unit_qty

    AVERAGE  shift, and go to state 20
    STDDEV   shift, and go to state 21
    F_MAX    shift, and go to state 22
    F_MIN    shift, and go to state 23
    INTEGER  shift, and go to state 127
    FLOAT    shift, and go to state 128

    unit_qty  go to state 132


state 72

  117 bool_expr: unit_qty IN . limit_range

    '{'  shift, and go to state 133

    limit_range  go to state 134


state 73

  118 bool_expr: unit_qty '<' . unit_qty

    AVERAGE  shift, and go to state 20
    STDDEV   shift, and go to state 21
    F_MAX    shift, and go to state 22
    F_MIN    shift, and go to state 23
    INTEGER  shift, and go to state 127
    FLOAT    shift, and go to state 128

    unit_qty  go to state 135


state 74

  119 bool_expr: unit_qty '>' . unit_qty

    AVERAGE  shift, and go to state 20
    STDDEV   shift, and go to state 21
    F_MAX    shift, and go to state 22
    F_MIN    shift, and go to state 23
    INTEGER  shift, and go to state 127
    FLOAT    shift, and go to state 128

    unit_qty  go to state 136


state 75

  132 float_expr: unit_qty '/' . unit_qty

    AVERAGE  shift, and go to state 20
    STDDEV   shift, and go to state 21
    F_MAX    shift, and go to state 22
    F_MIN    shift, and go to state 23
    INTEGER  shift, and go to state 127
    FLOAT    shift, and go to state 128

    unit_qty  go to state 137


state 76

  105 bool_expr: bool_expr B_AND . bool_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    AVERAGE    shift, and go to state 20
    STDDEV     shift, and go to state 21
    F_MAX      shift, and go to state 22
    F_MIN      shift, and go to state 23
    SQRT       shift, and go to state 24
    LOG        shift, and go to state 25
    LOGN       shift, and go to state 26
    EXP        shift, and go to state 27
    INTEGER    shift, and go to state 28
    FLOAT      shift, and go to state 29
    VARIABLE   shift, and go to state 30
    '!'        shift, and go to state 31
    '('        shift, and go to state 32

    simple_int_expr  go to state 33
    unit_qty         go to state 34
    bool_expr        go to state 138
    float_expr       go to state 36


state 77

  106 bool_expr: bool_expr B_OR . bool_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    AVERAGE    shift, and go to state 20
    STDDEV     shift, and go to state 21
    F_MAX      shift, and go to state 22
    F_MIN      shift, and go to state 23
    SQRT       shift, and go to state 24
    LOG        shift, and go to state 25
    LOGN       shift, and go to state 26
    EXP        shift, and go to state 27
    INTEGER    shift, and go to state 28
    FLOAT      shift, and go to state 29
    VARIABLE   shift, and go to state 30
    '!'        shift, and go to state 31
    '('        shift, and go to state 32

    simple_int_expr  go to state 33
    unit_qty         go to state 34
    bool_expr        go to state 139
    float_expr       go to state 36


state 78

  107 bool_expr: bool_expr IMPLIES . bool_expr

    INSTANCES  shift, and go to state 18
    UNIQUE     shift, and go to state 19
    AVERAGE    shift, and go to state 20
    STDDEV     shift, and go to state 21
    F_MAX      shift, and go to state 22
    F_MIN      shift, and go to state 23
    SQRT       shift, and go to state 24
    LOG        shift, and go to state 25
    LOGN       shift, and go to state 26
    EXP        shift, and go to state 27
    INTEGER    shift, and go to state 28
    FLOAT      shift, and go to state 29
    VARIABLE   shift, and go to state 30
    '!'        shift, and go to state 31
    '('        shift, and go to state 32

    simple_int_expr  go to state 33
    unit_qty         go to state 34
    bool_expr        go to state 140
    float_expr       go to state 36


state 79

  104 assert: ASSERT '(' bool_expr ')' . ';'

    ';'  shift, and go to state 141


state 80

  137 float_expr: float_expr F_POW . float_expr
